# robotics_nanodegree_udacity_2019

./: .gitattributes  .gitignore  README.md  rtabmap.db
01_build_my_world/: README.md  myworld
01_build_my_world/model/building/: model.sdf
01_build_my_world/model/cabinet/: model.config
01_build_my_world/model/cafetable/: model.config
01_build_my_world/model/robot/: model.config  model.sdf
01_build_my_world/script/: hello.cpp
01_build_my_world/world/: libhello.dylib
02_go_chase_it/: README.md  Vagrantfile  ros-bootstrap.sh
02_go_chase_it/catkin_ws/src/ball_chaser/: CMakeLists.txt  package.xml
02_go_chase_it/src/ball_chaser/: CMakeLists.txt
02_go_chase_it/src/ball_chaser/launch/: ball_chaser.launch
03_where_am_i/: README.md
03_where_am_i/localization/: MCL.cpp  multi_dimentional_KF.cpp
03_where_am_i/src/robo/: package.xml
04_map_my_world/: README.md  rtabmap.db
04_map_my_world/src/robo/: CMakeLists.txt  package.xml
05_home_service_robot/: README.md
05_home_service_robot/scripts/: launch.sh  markers.sh  pick_objects.sh  setup.bash  setup.sh
05_home_service_robot/src/add_markers/: CMakeLists.txt  package.xml
05_home_service_robot/src/add_markers/launch/: add_markers.launch
05_home_service_robot/src/add_markers/src/: add_markers.cpp
05_home_service_robot/src/homerobo/: CMakeLists.txt  package.xml
05_home_service_robot/src/pick_objects/: CMakeLists.txt  package.xml
05_home_service_robot/src/pick_objects/launch/: pick_objects.launch
05_home_service_robot/src/pick_objects/src/: navigation_goal.cpp
(+46 files in other folders)
